--- a/subprojects/docs/src/docs/userguide/plugins.adoc
+++ b/subprojects/docs/src/docs/userguide/plugins.adoc
@@ -231,9 +231,9 @@ See api:org.gradle.plugin.management.PluginManagementSpec[] for complete documen
 [[sec:plugin_markers]]
 ===== Plugin Marker Artifacts
 
-Since the `plugins {}` DSL block only allows for declaring plugins by their globally unique plugin `id` and `version` properties, Gradle needs a way to look up the coordinates of the plugin implementation artifact. To do so, Gradle will look for a Plugin Marker Artifact with the coordinates `plugin.id:plugin.id.gradle.plugin:plugin.version`. This marker needs to have a dependency on the actual plugin implementation. Publishing these markers is automated by the <<javaGradle_plugin,java-gradle-plugin>>.
+Since the `plugins {}` DSL block only allows for declaring plugins by their globally unique plugin `id` and `version` properties, Gradle needs a way to look up the coordinates of the plugin implementation artifact. To do so, Gradle will look for a Plugin Marker Artifact with the coordinates `plugin.id:plugin.id.gradle.plugin:plugin.version`. This marker needs to have a dependency on the actual plugin implementation. Publishing these markers is automated by the <<java_gradle_plugin,java-gradle-plugin>>.
 
-For example, the following complete sample from the `sample-plugins` project shows how to publish a `org.gradle.sample.hello` plugin and a `org.gradle.sample.goodbye` plugin to both an Ivy and Maven repository using the combination of the <<javaGradle_plugin,java-gradle-plugin>>, the <<publishing_maven,maven-publish>> plugin, and the <<publishing_ivy,ivy-publish>> plugin.
+For example, the following complete sample from the `sample-plugins` project shows how to publish a `org.gradle.sample.hello` plugin and a `org.gradle.sample.goodbye` plugin to both an Ivy and Maven repository using the combination of the <<java_gradle_plugin,java-gradle-plugin>>, the <<publishing_maven,maven-publish>> plugin, and the <<publishing_ivy,ivy-publish>> plugin.
 
 ++++
 <sample id="completePluginPublishing" title="Complete Plugin Publishing Sample" dir="plugins/publishing">
