--- a/subprojects/docs/src/docs/userguide/testKit.adoc
+++ b/subprojects/docs/src/docs/userguide/testKit.adoc
@@ -117,7 +117,7 @@ Instead, the code must be injected via the build script itself. The following sa
 [[sub:test-kit-automatic-classpath-injection]]
 ==== Automatic injection with the Java Gradle Plugin Development plugin
 
-The <<javaGradle_plugin,Java Gradle Plugin development plugin>> can be used to assist in the development of Gradle plugins. Starting with Gradle version 2.13, the plugin provides a direct integration with TestKit. When applied to a project, the plugin automatically adds the `gradleTestKit()` dependency to the test compile configuration. Furthermore, it automatically generates the classpath for the code under test and injects it via api:org.gradle.testkit.runner.GradleRunner#withPluginClasspath()[] for any `GradleRunner` instance created by the user. It's important to note that the mechanism currently _only_ works if the plugin under test is applied using the <<sec:plugins_block,plugins DSL>>. If the <<sub:gradle-runner-gradle-version,target Gradle version>> is prior to 2.8, automatic plugin classpath injection is not performed.
+The <<java_gradle_plugin,Java Gradle Plugin development plugin>> can be used to assist in the development of Gradle plugins. Starting with Gradle version 2.13, the plugin provides a direct integration with TestKit. When applied to a project, the plugin automatically adds the `gradleTestKit()` dependency to the test compile configuration. Furthermore, it automatically generates the classpath for the code under test and injects it via api:org.gradle.testkit.runner.GradleRunner#withPluginClasspath()[] for any `GradleRunner` instance created by the user. It's important to note that the mechanism currently _only_ works if the plugin under test is applied using the <<sec:plugins_block,plugins DSL>>. If the <<sub:gradle-runner-gradle-version,target Gradle version>> is prior to 2.8, automatic plugin classpath injection is not performed.
 
 The plugin uses the following conventions for applying the TestKit dependency and injecting the classpath:
 
