--- a/subprojects/docs/src/docs/userguide/managingTransitiveDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/managingTransitiveDependencies.adoc
@@ -20,7 +20,7 @@ Resolution behavior for transitive dependencies can be customized to a high degr
 [[sec:dependency_constraints]]
 === Dependency constraints
 
-Dependency constraints allow you to define the version or the version range of both dependencies declared in the build script and transitive dependencies. It is the preferred method to express constraints that should be applied to all dependencies of a configuration. When Gradle attempts to resolve a dependency to a module version, all <<sub:declaring_dependency_with_version,dependency declarations with version>>, all transitive dependencies and all dependency constraints for that module are taken into consideration. The highest version that matches all conditions is selected. If no such version is found, Gradle fails with an error showing the conflicting delcarations. If this happens you can adjust your dependencies or dependency constraints declarations, or <<managing_transitive_dependencies,make other adjustments to the transitive dependencies>> if needed.
+Dependency constraints allow you to define the version or the version range of both dependencies declared in the build script and transitive dependencies. It is the preferred method to express constraints that should be applied to all dependencies of a configuration. When Gradle attempts to resolve a dependency to a module version, all <<sub:declaring_dependency_with_version,dependency declarations with version>>, all transitive dependencies and all dependency constraints for that module are taken into consideration. The highest version that matches all conditions is selected. If no such version is found, Gradle fails with an error showing the conflicting delcarations. If this happens you can adjust your dependencies or dependency constraints declarations, or <<managing_transitive_dependencies,make other adjustments to the transitive dependencies>> if needed. Similar to dependency declarations, dependency constraint declarations are <<sub:scope_of_dependency_configurations,scoped by configurations>> and can therefore be selectively defined for parts of a build.
 
 ++++
 <sample id="dependencyConstraints" dir="userguide/dependencies/dependencyConstraints" title="Define dependency constraints">
@@ -29,8 +29,6 @@ Dependency constraints allow you to define the version or the version range of b
 ++++
 
 In the example, all versions are omitted from the dependency declaration. Instead, the versions are defined in the constraints block. The version definition for `commons-codec:1.11` is only taken into account if `commons-codec` is brought in as transitive dependency, since `commons-codec` is not defined as dependency in the project. Otherwise, the constraint has no effect.
-
-Dependency constraints can have different scopes defined by configurations <<sub:scope_of_dependency_configurations,in the same way as dependencies>>.
 
 [[sec:excluding_transitive_module_dependencies]]
 === Excluding transitive module dependencies
