--- a/subprojects/docs/src/docs/userguide/declaringDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/declaringDependencies.adoc
@@ -17,7 +17,7 @@
 
 Gradle builds can declare dependencies on external binaries, raw files and other Gradle projects. You can find examples for common scenarios in this section. For more information, see the <<dependency_types,full reference on all types of dependencies>>.
 
-[[sec:declaring_binary_dependency]]
+[[sec:declaring_dependency_to_module]]
 === Declaring a dependency to a module
 
 Modern software projects rarely build code in isolation. Projects reference external modules for the purpose of reusing existing and proven functionality. Upon resolution, selected versions of external modules are downloaded from dedicated repositories and stored in a cache to avoid unnecessary network traffic.
@@ -26,7 +26,7 @@ Modern software projects rarely build code in isolation. Projects reference exte
 <figure xmlns:xi="http://www.w3.org/2001/XInclude">
     <title>Resolving dependencies from remote repositories</title>
     <imageobject>
-        <imagedata fileref="img/dependency-management-binary-dependencies.png" width="150mm" />
+        <imagedata fileref="img/dependency-management-dependencies-to-modules.png" width="150mm" />
     </imageobject>
 </figure>
 +++++
@@ -37,8 +37,8 @@ Modern software projects rarely build code in isolation. Projects reference exte
 A typical example for such a library in a Java project is the link:https://projects.spring.io/spring-framework/[Spring framework]. The following code snippet declares a compile-time dependency on the Spring web module by its coordinates: `org.springframework:spring-web:5.0.2.RELEASE`. Gradle resolves the dependency including its transitive dependencies from the link:https://search.maven.org/[Maven Central repository] and uses it to compile Java source code. The version attribute of the dependency coordinates points to a _concrete version_ indicating that the underlying artifacts don't change over time. The use of concrete versions ensures reproducibility for the aspect of dependency resolution.
 
 ++++
-<sample id="binary-dependencies-concrete-version" dir="userguide/dependencies/declaringBinaryDependenciesWithConcreteVersion" title="Declaring a dependencies with a concrete version">
-    <sourcefile file="build.gradle" snippet="binary-dependencies"/>
+<sample id="dependencies-concrete-version" dir="userguide/dependencies/declaringDependenciesWithConcreteVersion" title="Declaring a dependencies with a concrete version">
+    <sourcefile file="build.gradle" snippet="dependencies"/>
 </sample>
 ++++
 
@@ -49,8 +49,8 @@ A Gradle project can define other types of repositories hosting modules. You can
 A recommended practice for larger projects is to declare dependencies without versions and use <<sec:dependency_constraints,dependency constraints>> for version declaration. The advantage is that dependency constrains allow you to manage versions of all dependencies, including transitive ones, in one place.
 
 ++++
-<sample id="binary-dependencies-without-version" dir="userguide/dependencies/declaringBinaryDependenciesWithoutVersion" title="Declaring a dependencies without version">
-    <sourcefile file="build.gradle" snippet="binary-dependencies-without-version"/>
+<sample id="dependencies-without-version" dir="userguide/dependencies/declaringDependenciesWithoutVersion" title="Declaring a dependencies without version">
+    <sourcefile file="build.gradle" snippet="dependencies-without-version"/>
 </sample>
 ++++
 
@@ -64,8 +64,8 @@ Using dynamic versions in a build bears the risk of potentially breaking it. As 
 ====
 
 ++++
-<sample id="binary-dependencies-dynamic-version" dir="userguide/dependencies/declaringBinaryDependenciesWithDynamicVersion" title="Declaring a dependencies with a dynamic version">
-    <sourcefile file="build.gradle" snippet="binary-dependencies"/>
+<sample id="dependencies-dynamic-version" dir="userguide/dependencies/declaringDependenciesWithDynamicVersion" title="Declaring a dependencies with a dynamic version">
+    <sourcefile file="build.gradle" snippet="dependencies"/>
 </sample>
 ++++
 
@@ -89,8 +89,8 @@ A team might decide to implement a series of features before releasing a new ver
 In Maven repositories, changing versions are commonly referred to as link:https://maven.apache.org/guides/getting-started/index.html#What_is_a_SNAPSHOT_version[snapshot versions]. Snapshot versions contain the suffix `-SNAPSHOT`. The following example demonstrates how to declare a snapshot version on the Spring dependency.
 
 ++++
-<sample id="binary-dependencies-changing-version" dir="userguide/dependencies/declaringBinaryDependenciesWithChangingVersion" title="Declaring a dependencies with a changing version">
-    <sourcefile file="build.gradle" snippet="binary-dependencies"/>
+<sample id="dependencies-changing-version" dir="userguide/dependencies/declaringDependenciesWithChangingVersion" title="Declaring a dependencies with a changing version">
+    <sourcefile file="build.gradle" snippet="dependencies"/>
 </sample>
 ++++
 
